<?xml version="1.0"?>
<package>
  <name>sb_ai</name>
  <version>0.0.0</version>
  <description>The AI package</description>
  <maintainer email="jenniferchingling@gmail.com">Jennifer Ling</maintainer>
  <license>MIT</license>
  <url type="website">http://snowbots.ca</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sb_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sb_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>

</package>
