<?xml version="1.0"?>
<package>

  <name>sb_waypoint_manager</name>
  <version>0.0.0</version>
  <description>The sb_waypoint_manager package</description>

  <maintainer email="jenniferchingling@gmail.com">Jennifer Ling</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sb_msgs</build_depend>
  <build_depend>sb_gps</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sb_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>sb_gps</run_depend>

</package>
